--- a/labs/Postgres/postgresLab.tex
+++ b/labs/Postgres/postgresLab.tex
@@ -1,5 +1,5 @@
 % to build this file run:
-% pdflatex -shell-escape comp543-postgresLab.tex
+% pdflatex -shell-escape postgresLab.tex
 
 %Copyright 2019 Rice University
 %
