--- a/labs/Postgres/lab-postgres.tex
+++ b/labs/Postgres/lab-postgres.tex
@@ -1,5 +1,5 @@
 % to build this file run:
-% pdflatex -shell-escape postgresLab.tex
+% pdflatex -shell-escape Lab-Postgres.tex
 
 %Copyright 2019 Rice University
 %
