--- a/labs/JupyterNotebook/Lab-Jupyter.ipynb
+++ b/labs/JupyterNotebook/Lab-Jupyter.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copyright ©  2019 Rice University\n",
+    "Copyright ©  2019 Rice University, Risa B Myers  (rbm2@rice.edu) and Christopher M Jermaine (cmj4@rice.edu)\n",
     "\n",
     "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
     "you may not use this file except in compliance with the License.\n",
