--- a/exercises/Outliers/Outliers.ipynb
+++ b/exercises/Outliers/Outliers.ipynb
@@ -234,9 +234,7 @@
     "\n",
     "For this task, you will be asked to implement (in Python) the nested loops algorithm on slide 29 of the \"outliers\" lecture. Start with the code below, and fill in the appropriate missing code. To implement the priority queue, use Python's heapq. The distance between data points should be implemented using Euclidean distance (the $\\ell_2$-norm).\n",
     "\n",
-    "You may find the numpy linear algebra function **norm** helpful. \n",
-    "\n",
-    "https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.norm.html"
+    "You may find the numpy linear algebra function `norm` helpful: [norm documentation](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.norm.html)"
    ]
   },
   {
