updated copyright notices

--- a/assignments/Sprark-kNN/Spark-kNN.tex
+++ b/assignments/Sprark-kNN/Spark-kNN.tex
@@ -1,4 +1,4 @@
-%Copyright ©  2019 Rice University, Christopher M Jermaine (cmj4@rice.edu), and Risa B Myers  (rbm2@rice.edu)
+%Copyright © 2019  Christopher M Jermaine (cmj4@rice.edu), and Risa B Myers  (rbm2@rice.edu)
 %
 %Licensed under the Apache License, Version 2.0 (the "License");
 %you may not use this file except in compliance with the License.
