--- a/assignments/SQL-Declarative/SQL-Declarative.ipynb
+++ b/assignments/SQL-Declarative/SQL-Declarative.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 1 -- Declarative SQL\n",
+    "# Declarative SQL\n",
     "\n",
     "### Description\n",
     "\n",
