--- a/lectures/lectureSourceCodeAndFigures/DSTM-26DimReducton.tex
+++ b/lectures/lectureSourceCodeAndFigures/DSTM-26DimReducton.tex
@@ -13,7 +13,7 @@
 %limitations under the License.
 %===============================================================
 \documentclass[aspectratio=169]{beamer}
-\mode<presentation> %use <handout> for handout mode
+\mode<presentation> 
 {
 \usetheme[noshadow, minimal,numbers,riceb,nonav]{Rice}
 \usefonttheme[onlymath]{serif}
