added deep learning lectures

--- a/lectures/lectureSourceCodeAndFigures/DSTM-27FeedFordwardHandout.tex
+++ b/lectures/lectureSourceCodeAndFigures/DSTM-27FeedFordwardHandout.tex
@@ -36,7 +36,7 @@
 \rfoot{\thepage}
 
 
-\title{Tools \& Models for Data Science \\ Lecture 6 SQL 2 Handout}
+\title{Tools \& Models for Data Science \\ Deep Learning Feed Forward Handout}
 \date{}
 
 % Set this length to 0pt if you don't want any lines!
