--- a/lectures/lectureSourceCodeAndFigures/DSTM-30LSTM.tex
+++ b/lectures/lectureSourceCodeAndFigures/DSTM-30LSTM.tex
@@ -124,7 +124,7 @@
 	\item Each module is 1 iteration of the network
 \end{itemize}
 \end{itemize}
-\includegraphics[width=0.8\textwidth]{LSTM/LSTM3-SimpleRNN.png}
+\includegraphics[width=0.8\textwidth]{lectLSTM/LSTM3-SimpleRNN.png}
 \footnote{Reprinted with permission. \url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{frame}
 %***********************************************************
@@ -193,7 +193,7 @@
 	\item Uses those to output a view of its current state	
 	\end{itemize}
 \end{itemize}
-\includegraphics[width=0.8\textwidth]{LSTM/LSTMNew.png}
+\includegraphics[width=0.8\textwidth]{lectLSTM/LSTMNew.png}
 \footnote{Reprinted with permission. \url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 
 \end{frame}
@@ -209,7 +209,7 @@
 	\item tanh means a hyperbolic tangent activation layer at the top
 	\end{itemize}
 \end{itemize}
-\includegraphics[width=0.8\textwidth]{LSTM/LSTMNew.png}
+\includegraphics[width=0.8\textwidth]{lectLSTM/LSTMNew.png}
 \footnote{Reprinted with permission. \url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{frame}
 %***********************************************************
@@ -226,7 +226,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/highway.png}
+\includegraphics[width=1\textwidth]{lectLSTM/highway.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -247,7 +247,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.4\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/highway.png}
+\includegraphics[width=1\textwidth]{lectLSTM/highway.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -271,7 +271,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/memorized.png}
+\includegraphics[width=1\textwidth]{lectLSTM/memorized.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -292,7 +292,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/dampen.png}
+\includegraphics[width=1\textwidth]{lectLSTM/dampen.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -311,7 +311,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/dampen.png}
+\includegraphics[width=1\textwidth]{lectLSTM/dampen.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -337,7 +337,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/adding.png}
+\includegraphics[width=1\textwidth]{lectLSTM/adding.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -357,7 +357,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/output.png}
+\includegraphics[width=1\textwidth]{lectLSTM/output.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -379,7 +379,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{LSTM/output.png}
+\includegraphics[width=1\textwidth]{lectLSTM/output.png}
 \footnote{Reprinted with permission.\\ \hspace{1.7em}\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs/}}
 \end{column}
 \end{columns}
@@ -425,7 +425,7 @@
 %***********************************************************
 \begin{frame}{Stacking LSTMs}
 
-\includegraphics[width=0.9\textwidth]{LSTM/Stacked.jpg}
+\includegraphics[width=0.9\textwidth]{lectLSTM/Stacked.jpg}
 \end{frame}
 %***********************************************************
 \begin{frame}{Creates a Grid of LSTMs}
