--- a/labs/JupyterNotebook/Lab-Juptyer.tex
+++ b/labs/JupyterNotebook/Lab-Juptyer.tex
@@ -111,7 +111,7 @@
 %\pagestyle{empty}
 
 \begin{center}
-{\bf \huge{COMP 543 Lab \#1: Setting up Jupyter Notebooks}}
+{\bf \huge{Data Science Tools and Models: Setting up Jupyter Notebooks}}
 \end{center}
 
 
