updaeted Spark-intro assignment

--- a/assignments/Spark-Intro/Spark-Intro.ipynb
+++ b/assignments/Spark-Intro/Spark-Intro.ipynb
@@ -11,6 +11,101 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 2 different datasets that you will use:\n",
+    "* Rx dataset: Medication prescriptions in the United Kingdom from  July 2016 to September 2017\n",
+    "* Bioinformatics dataset: Tardigrade and bacteria genome sequences\n",
+    "\n",
+    "There are 3 tasks:\n",
+    "1. Rx dataset\n",
+    "\n",
+    "    1.1  Compute the total **net ingredient cost** of prescription items dispensed for each PERIOD \n",
+    "    \n",
+    "    1.2 Compute the 5 practices that issued the prescriptions with the highest total net ingredient cost\n",
+    "    \n",
+    "2. Bioinformatics dataset\n",
+    "\n",
+    "      2.1 Compute and label each sequence from a provided sample as most likely being Tardigrade or bacterial using Edit Distance.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasets\n",
+    "### Rx Dataset\n",
+    "\n",
+    "We will be using practice prescribing data from the UK National Health Service.\n",
+    "The data set itself is a set of simple text files.  Each prescription/prescribing practice is a different line in a file. \n",
+    "The attributes present on each line of the files are, in order:\n",
+    "\n",
+    "| Field    | Description                             |\n",
+    "|----------|-----------------------------------------|\n",
+    "| SHA      | Area team identifier                    |\n",
+    "| PCT      | Clinical commissioning group identifier |\n",
+    "| PRACTICE | Practice identifier                     |\n",
+    "| BNF_CODE | British National Formulary (BNF) code   |\n",
+    "| BNF_NAME | BNF name                                |\n",
+    "| ITEMS    | Number of prescription items dispensed  |\n",
+    "| NIC      | Net ingredient cost (pounds and pence)  |\n",
+    "| ACT_COST | Actual cost (pounds and pence)          |\n",
+    "| QUANTITY | Quantity - whole numbers                |\n",
+    "| PERIOD   | YYYYMM                                  |\n",
+    "\n",
+    "Some additional information on the data can be found here:\n",
+    "\n",
+    "https://digital.nhs.uk/data-and-information/areas-of-interest/prescribing/practice-level-prescribing-in-england-a-summary/practice-level-prescribing-glossary-of-terms\n",
+    "\n",
+    "The data files are in comma separated values (CSV) format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "A super-small subset of the first file (only about 1000 lines) is available for download (see Canvas).  This file may be used on your computer using Docker and the Spark container. If you want, you can also use this file for testing and debugging by loading it into HDFS (just like you did in lab) and then running your Spark program over it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tardigrades\n",
+    "\n",
+    "What is a tardigrade and why are we looking at this problem?\n",
+    "\n",
+    "Tardigrades, also known as **water bears** are micro-animals that live in the water. They are caterpillar-like, with 4 pairs of legs and segmented bodies. They are ubiquitous and resilient. They have found just about everywhere in the world.  (https://en.wikipedia.org/wiki/Tardigrade)\n",
+    "\n",
+    "In 2015, Boothby et al. published a paper claiming that the tardigrade's ability to survive extreme conditions is due to horizontal gene transfer (HGT)(transfer of genetic material between species) from many different species, including bacteria, fungi, and plants. \n",
+    "\n",
+    "Koutsovoulos et al. investigated Boothby's claim and rebutted it. Basically claiming that the evidence seen was DNA sample contamination, not actual HGT.\n",
+    "\n",
+    "* The contaminated tardigrade assemblies are in \\\\\n",
+    "``LMYF01.1.oneline.fa``\n",
+    "You will be comparing these contigs with contigs in the following other files:\n",
+    "\n",
+    "* The **clean tardigrade reference assemblies are in the file \\\\\n",
+    "``nHd.2.3.abv500.oneline.fa`` \n",
+    "\n",
+    "* Bacterial contigs are in the file \n",
+    "``exp1.oneline.fa``\n",
+    "\n",
+    "\n",
+    "\n",
+    "Each file contains a set of lines, one line per contig. Valid lines start with the ``>`` symbol, followed by the organism name. Next is a vertical bar (``|``) followed by a unique identifier for the contig within the organism. There may then be additional text describing the contig. Finally, there will be a ``<`` symbol. After this symbol, the remaining text on the line contains the DNA code. As you may know, this text consists of the characters A, C, T, and G.\n",
+    "\n",
+    "Valid contig lines start with a ``>`` and contain only the specified letters in the DNA code.\n",
+    "You should only include valid lines in your analysis.\n",
+    "\n",
+    "1. Boothby TC, Tenlen JR, Smith FW, Wang JR, Patanella KA, Nishimura EO, et al. Evidence for extensive horizontal gene transfer from the draft genome of a tardigrade. Proceedings of the National Academy of Sciences. 2015;112(52):15976-81.\n",
+    "\n",
+    "1.\tKoutsovoulos G, Kumar S, Laetsch DR, Stevens L, Daub J, Conlon C, et al. No evidence for extensive horizontal gene transfer in the genome of the tardigrade Hypsibius dujardini. Proceedings of the National Academy of Sciences. 2016:201600338."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-07-25T13:38:34.825959Z",
